Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I21a2962c5ae08b820a33b14a9a2c0243776cf792

--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -2377,7 +2377,7 @@
     <string name="experimental_category_title" msgid="898904396646344152">"إعدادات تجريبية"</string>
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"عناصر التحكّم في الميزات"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
-    <string name="talkback_summary" msgid="5820927220378864281">"إن تطبيق قارئ الشاشة مُصمَّم في الأساس من أجل الأشخاص الكفيفين والذين يعانون من ضعف في النظر."</string>
+    <string name="talkback_summary" msgid="5820927220378864281">"هو قارئ شاشة مُصمَّم في الأساس للأشخاص الذين يعانون فقدان البصر أو ضعفه."</string>
     <string name="select_to_speak_summary" msgid="1995285446766920925">"يمكنك النقر على بيانات على شاشتك لتتم قراءتها بصوت عالٍ"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"الإعدادات المفضّلة للشرح"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"لمحة عن الإعدادات المفضّلة للشرح"</string>
@@ -2492,7 +2492,7 @@
     <string name="accessibility_control_timeout_preference_summary" msgid="5283566580551714506">"حدّد مدة عرض الرسائل التي تطلب منك اتخاذ إجراء، على أن يتم عرضها بشكل مؤقت.\n\nهذا الإعداد غير متاح في كل التطبيقات."</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"مهلة النقر مع الاستمرار"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"قلب الألوان"</string>
-    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"استخدام قلب الألوان"</string>
+    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"قلب الألوان"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"اختصار قلب الألوان"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"‏تحوّل ميزة \"قلب الألوان\" الشاشات المضيئة إلى شاشات معتمة.&lt;br/&gt;&lt;br/&gt; ملاحظة: &lt;ol&gt; &lt;li&gt; تحوّل أيضًا ميزة \"قلب الألوان\" الشاشات المعتمة إلى شاشات مضيئة.&lt;/li&gt; &lt;li&gt; ستتغيّر الألوان في الوسائط والصور.&lt;/li&gt; &lt;li&gt; يمكن استخدام المظهر الداكن لعرض خلفية داكنة. يعمل وضع \"المظهر الداكن\" مع التطبيقات المتوافقة. أما خيار \"قلب الألوان\"، فيعمل مع جميع التطبيقات.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"النقر التلقائي (فترة الثبات)"</string>
@@ -2516,7 +2516,7 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"الاهتزاز عند لمس الشاشة"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"استخدام ميزة <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"فتح <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"استخدام ميزة \"تصحيح الألوان\""</string>
+    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"تصحيح الألوان"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"اختصار تصحيح الألوان"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"لمحة عن تصحيح الألوان"</string>
     <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"تعرّف على مزيد من المعلومات حول تصحيح الألوان"</string>
@@ -4812,7 +4812,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"يمكنك فتح تطبيق الكاميرا من خلال لف رسغك مرتين"</string>
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"اضغط على زر التشغيل مرتين لتشغيل الكاميرا"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"فتح الكاميرا سريعًا بدون فتح قفل الشاشة"</string>
-    <string name="screen_zoom_title" msgid="6928045302654960559">"حجم العرض"</string>
+    <string name="screen_zoom_title" msgid="6928045302654960559">"حجم شاشة العرض"</string>
     <string name="screen_zoom_short_summary" msgid="2458636490408833800">"يمكنك تكبير العناصر المعروضة على الشاشة أو تصغيرها."</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"عرض، كثافة، شاشة تصغير/تكبير، تغيير الحجم، ضبط الحجم"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"يمكنك تصغير العناصر المعروضة على الشاشة أو تكبيرها. قد يتغيّر موضع بعض التطبيقات على الشاشة."</string>
@@ -5786,7 +5786,7 @@
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"ضغطة طويلة"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"إظهار المحفظة"</string>
     <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"السماح بالوصول إلى المحفظة من شاشة القفل والإعدادات السريعة"</string>
-    <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"إظهار عناصر التحكّم في الجهاز"</string>
+    <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"إظهار عناصر التحكم بالأجهزة"</string>
     <string name="lockscreen_privacy_controls_summary" msgid="6952176547084269909">"يمكنك الوصول إلى عناصر التحكّم عندما تكون الشاشة مُقفَلة."</string>
     <string name="lockscreen_double_line_clock_summary" msgid="2916159550425093703">"إظهار الساعة بخطين عندما تكون متاحة"</string>
     <string name="lockscreen_double_line_clock_setting_toggle" msgid="3408639316001688529">"ساعة بخطين"</string>
