--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -2395,8 +2395,8 @@
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"कारबाही गर्ने समय"</string>
     <string name="accessibility_control_timeout_preference_summary" msgid="5283566580551714506">"तपाईंलाई कारबाही गर्न लगाउने अस्थायी म्यासेज कति बेर देखाइनु पर्छ भन्ने कुरा छान्नुहोस्।\n\nयो सेटिङले सबै एपमा काम गर्दैन।"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"टच एण्ड होल्डको ढिलाइ"</string>
-    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"रङ्ग उल्टाउने सुविधा"</string>
-    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"रङ्ग उल्टाउने सुविधा प्रयोग गरियोस्"</string>
+    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"कलर इन्भर्सन"</string>
+    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"कलर इन्भर्सन प्रयोग गरियोस्"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"कलर इन्भर्सनको सर्टकट"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"रङ्ग उल्टाउने सुविधाले उज्यालो स्क्रिनलाई अँध्यारो बनाउँछ।&lt;br/&gt;&lt;br/&gt; ध्यान दिनु पर्ने कुरा: &lt;ol&gt; &lt;li&gt; रङ्ग उल्टाउने सुविधाले अँध्यारो स्क्रिनलाई उज्यालो पनि बनाउँछ&lt;/li&gt; &lt;li&gt; मिडिया र फोटोका रङ्ग परिवर्तन हुने छन्।&lt;/li&gt; &lt;li&gt; ब्याकग्राउन्ड अँध्यारो बनाउन अँध्यारो थिम प्रयोग गर्न सकिन्छ। अँध्यारो थिमले यो सुविधा चल्ने एपहरूमा मात्र काम गर्छ। रङ्ग उल्टाउने सुविधाले सबै एपमा काम गर्छ।&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"अटोक्लिक (ड्वेल टाइमिङ)"</string>
