--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -1454,7 +1454,7 @@
     <string name="screensaver_settings_summary_either_long" msgid="371949139331896271">"במהלך טעינה או עגינה"</string>
     <string name="screensaver_settings_summary_either_short" msgid="2126139984738506920">"בשני המצבים"</string>
     <string name="screensaver_settings_summary_sleep" msgid="6555922932643037432">"במהלך טעינה"</string>
-    <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"במהלך עגינה"</string>
+    <string name="screensaver_settings_summary_dock" msgid="6997766385189369733">"בזמן עגינה"</string>
     <string name="screensaver_settings_summary_never" msgid="4988141393040918450">"אף פעם"</string>
     <string name="screensaver_settings_summary_off" msgid="8720357504939106923">"כבוי"</string>
     <string name="screensaver_settings_disabled_prompt" msgid="1166343194760238835">"כדי לשלוט במה שקורה כאשר הטלפון בעגינה ו/או במצב שינה, הפעל את שומר המסך."</string>
@@ -2724,8 +2724,8 @@
     <string name="advanced_battery_title" msgid="3005993394776555079">"שימוש בסוללה"</string>
     <string name="history_details_title" msgid="8628584613889559355">"פרטי היסטוריה"</string>
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"שימוש בסוללה"</string>
-    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"הצגת נתוני השימוש ב-24 השעות האחרונות"</string>
-    <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"הצגת השימוש מאז הטעינה המלאה האחרונה"</string>
+    <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"נתוני השימוש ב-24 השעות האחרונות"</string>
+    <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"השימוש מאז הטעינה המלאה האחרונה"</string>
     <string name="battery_details_title" msgid="4531369291819754178">"שימוש בסוללה"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"פרטי שימוש"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"התאמת צריכת סוללה"</string>
@@ -2744,7 +2744,7 @@
     <string name="battery_saver_link_a11y" msgid="740558184830458845">"למידע נוסף על תכונת החיסכון בסוללה"</string>
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"ייתכן שחלק מהתכונות מוגבלות"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"שימוש מוגבר בסוללה"</string>
-    <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"הצגת האפליקציות המובילות במידת השימוש בסוללה"</string>
+    <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"האפליקציות המובילות במידת השימוש בסוללה"</string>
     <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"הטעינה מוגבלת זמנית"</string>
     <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"כדי לשמור על תקינות הסוללה. מידע נוסף."</string>
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"המשך הטעינה"</string>
@@ -3215,7 +3215,7 @@
     <string name="data_usage_menu_split_4g" msgid="3391899816926640583">"‏שימוש נפרד ב-4G"</string>
     <string name="data_usage_menu_show_wifi" msgid="6380926350184939975">"‏הצגת Wi‑Fi"</string>
     <string name="data_usage_menu_hide_wifi" msgid="4694889089278302691">"‏הסתרת Wi‑Fi"</string>
-    <string name="data_usage_menu_show_ethernet" msgid="4401026240876938859">"‏הצגת השימוש ב-Ethernet"</string>
+    <string name="data_usage_menu_show_ethernet" msgid="4401026240876938859">"‏השימוש ב-Ethernet"</string>
     <string name="data_usage_menu_hide_ethernet" msgid="7792365022467586772">"הסתרת שימוש באתרנט"</string>
     <string name="data_usage_menu_metered" msgid="4279260736172851951">"הגבלות רשת"</string>
     <string name="data_usage_menu_auto_sync" msgid="2632694000068175025">"סנכרון אוטומטי של נתונים"</string>
@@ -3638,7 +3638,7 @@
     <string name="keywords_display_cast_screen" msgid="2572331770299149370">"הקרנה, העברה, שיקוף מסך, שיתוף מסך, שיקוף, שיתוף צג, העברת מסך"</string>
     <string name="keywords_storage" msgid="3004667910133021783">"שטח, דיסק, כונן קשיח, שימוש במכשיר"</string>
     <string name="keywords_battery" msgid="7040323668283600530">"צריכת חשמל, טעינה"</string>
-    <string name="keywords_battery_usage" msgid="1763573071014260220">"הצגת השימוש בסוללה, השימוש בסוללה, צריכת החשמל"</string>
+    <string name="keywords_battery_usage" msgid="1763573071014260220">"השימוש בסוללה, השימוש בסוללה, צריכת החשמל"</string>
     <string name="keywords_battery_saver" msgid="6289682844453234359">"חיסכון בסוללה, חיסכון בחשמל, חיסכון"</string>
     <string name="keywords_battery_adaptive_preferences" msgid="1774870663426502938">"העדפות שניתנות להתאמה, סוללה שניתנת להתאמה"</string>
     <string name="keywords_spell_checker" msgid="5148906820603481657">"איות, מילון, בדיקת איות, תיקון אוטומטי"</string>
