--- a/res/values-ky/strings.xml
+++ b/res/values-ky/strings.xml
@@ -2282,7 +2282,7 @@
     <string name="feature_flags_dashboard_title" msgid="348990373716658289">"Функцияларды белгилөө"</string>
     <string name="talkback_title" msgid="8756080454514251327">"Talkback"</string>
     <string name="talkback_summary" msgid="5820927220378864281">"Экрандагы нерсени окуп берүүчү курал көздөрү начар көргөн адамдарга арналган"</string>
-    <string name="select_to_speak_summary" msgid="1995285446766920925">"Экрандагы нерсени түзмөк окуп бериши үчүн, аны басып коесуз"</string>
+    <string name="select_to_speak_summary" msgid="1995285446766920925">"Экрандагы нерсени угуу үчүн аны басып коесуз"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Коштомо жазуулардын жөндөөлөрү"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Коштомо жазуулардын жеке жөндөөлөрү тууралуу"</string>
     <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Коштомо жазуулардын жеке жөндөөлөрү тууралуу кеңири маалымат"</string>
@@ -2395,8 +2395,8 @@
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"Аракетке канча убакыт керек"</string>
     <string name="accessibility_control_timeout_preference_summary" msgid="5283566580551714506">"Автоматтык түрдө жоголуп кетүүчү билдирүүлөрдөгү аракеттерди аткарууга канча убакыт керектелерин көрсөтүңүз.\n\nБул параметр айрым колдонмолордо иштебейт."</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"Коё бербей басып туруу узактыгы"</string>
-    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Түстү инверсиялоо"</string>
-    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Түстү инверсиялоону колдонуу"</string>
+    <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Түстөрдү инверсиялоо"</string>
+    <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Түстөрдү инверсиялоону колдонуу"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Түстөрдү инверсиялоо ыкчам баскычы"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"Түстөрдү инверсиялоо менен, жарык түстөрдү караңгылатканга болот.&lt;br/&gt;&lt;br/&gt; Көңүл буруңуз: &lt;ol&gt; &lt;li&gt; Кара түстөр жарыгыраак болот.&lt;/li&gt; &lt;li&gt; Түстөрдү инверсиялоо функциясын медиафайлдарга жана сүрөттөргө колдонсо болот.&lt;/li&gt; &lt;li&gt;  Караңгы тема айрым колдонмолордо, ал эми түстөрдү инверсиялоо бардык колдонмолордо колдонулат.&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Автоматтык түрдө чыкылдатуу (кечигүү убакыты)"</string>
@@ -4863,12 +4863,12 @@
     <string name="ambient_display_title" product="device" msgid="4164103424628824786">"Түзмөктү текшерүү үчүн эки жолу таптаңыз"</string>
     <string name="one_handed_title" msgid="2584414010282746195">"Бир кол режими"</string>
     <string name="one_handed_mode_enabled" msgid="3396864848786359651">"Бир кол режимин колдонуу"</string>
-    <string name="one_handed_mode_shortcut_title" msgid="1847871530184067369">"Бир колдуу режимдин ыкчам баскычы"</string>
+    <string name="one_handed_mode_shortcut_title" msgid="1847871530184067369">"Бир кол режиминин ыкчам баскычы"</string>
     <string name="keywords_one_handed" msgid="969440592493034101">"бир кол менен колдонуу"</string>
-    <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"Ылдый сүрүңүз:"</string>
+    <string name="one_handed_mode_swipe_down_category" msgid="110178629274462484">"Ылдый сүрүү:"</string>
     <string name="one_handed_mode_use_shortcut_category" msgid="1414714099339147711">"Төмөнкү үчүн ыкчам баскычты колдонуу:"</string>
-    <string name="one_handed_mode_intro_text" msgid="4313074112548160836">"Бир колдуу режимди иштетүү үчүн экрандын төмөнкү кырын ылдый сүрүңүз. Бул функцияны колдонуу үчүн тутумдун жөндөөлөрүндө жаңсап чабыттоо иштетилгенин текшериңиз."</string>
-    <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"Экранды жакыныраак тартып алыңыз"</string>
+    <string name="one_handed_mode_intro_text" msgid="4313074112548160836">"Бир кол режимин иштетүү үчүн экрандын төмөнкү кырын ылдый сүрүңүз. Тутумдун жөндөөлөрүндө жаңсап чабыттоо функциясынын күйгүзүлгөнүн текшериңиз."</string>
+    <string name="one_handed_action_pull_down_screen_title" msgid="9187194533815438150">"Экранды жакыныраак жерге жылдыруу"</string>
     <string name="one_handed_action_pull_down_screen_summary" msgid="7582432473450036628">"Экрандын жогору жагы баш башмагыңыз жеткендей аралыкка жылат."</string>
     <string name="one_handed_action_show_notification_title" msgid="8789305491485437130">"Билдирмелерди көрсөтүү"</string>
     <string name="one_handed_action_show_notification_summary" msgid="8281689861222000436">"Билдирмелер жана жөндөөлөр көрүнөт."</string>
