--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -2380,7 +2380,7 @@
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"Ажурирај зголемување екран при премини меѓу аплик."</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"Прекини повик со копче за вклучување"</string>
     <string name="accessibility_toggle_large_pointer_icon_title" msgid="5508351959249876801">"Голем покажувач на глувчето"</string>
-    <string name="accessibility_disable_animations" msgid="2993529829457179058">"Отстранување анимации"</string>
+    <string name="accessibility_disable_animations" msgid="2993529829457179058">"Отстрани анимации"</string>
     <string name="accessibility_toggle_primary_mono_title" msgid="7587152099472946571">"Моно аудио"</string>
     <string name="accessibility_toggle_primary_mono_summary" msgid="1935283927319407303">"Комбинирај канали кога се пушта аудио"</string>
     <string name="accessibility_toggle_primary_balance_title" msgid="7332275200153366714">"Баланс на аудио"</string>
@@ -2466,7 +2466,7 @@
     <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Црвена и зелена"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Сина и жолта"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Дополнително затемнување"</string>
-    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Додајте дополнително затемнување"</string>
+    <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Додај дополнително затемнување"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Кратенка за дополнително затемнување"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"За дополнително затемнување"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Затемнете го екранот повеќе од минималната осветленост на телефонот"</string>
@@ -4147,9 +4147,9 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"настани"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"Настани"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"Дозволете апликациите да занемаруваат"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"Апликации што може да го прекинуваат режимот"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"Изберете повеќе апликации"</string>
-    <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Нема избрани апликации"</string>
+    <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"Не се избрани апликации"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"Апликациите не може да го прекинуваат"</string>
     <string name="zen_mode_bypassing_apps_add" msgid="5031919618521327102">"Додајте апликации"</string>
     <string name="zen_mode_bypassing_apps_summary_all" msgid="4684544706511555744">"Сите известувања"</string>
