--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -53,7 +53,7 @@
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Küçült"</string>
     <string name="font_size_make_larger_desc" msgid="5583046033381722247">"Büyüt"</string>
     <string name="auto_rotate_settings_primary_switch_title" msgid="3151963020165952847">"Otomatik döndürmeyi kullan"</string>
-    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Yüz Algılama işlevi, Otomatik Döndürme doğruluğunu iyileştirmek için ön kamerayı kullanır. Resimler hiçbir zaman saklanmaz veya Google\'a gönderilmez."</string>
+    <string name="smart_rotate_text_headline" msgid="436277795183609578">"Yüz Algılama işlevi, otomatik döndürme doğruluğunu iyileştirmek için ön kamerayı kullanır. Görüntüler hiçbir zaman saklanmaz veya Google\'a gönderilmez."</string>
     <string name="font_size_preview_text_headline" msgid="1173103737980511652">"Örnek metin"</string>
     <string name="font_size_preview_text_title" msgid="6363561029914452382">"Muhteşem Oz Büyücüsü"</string>
     <string name="font_size_preview_text_subtitle" msgid="5806349524325544614">"11. Bölüm: Oz\'un Muhteşem Zümrüt Kenti"</string>
@@ -1403,7 +1403,7 @@
     <string name="wallpaper_dashboard_summary" msgid="2324472863981057118">"Ana ekran, kilit ekranı"</string>
     <string name="wallpaper_settings_summary_default" msgid="7569803705735001813">"Varsayılan"</string>
     <string name="wallpaper_settings_summary_custom" msgid="3174561317688848729">"Özel"</string>
-    <string name="wallpaper_suggestion_title" msgid="3812842717939877330">"Duvar kağıdını değiştir"</string>
+    <string name="wallpaper_suggestion_title" msgid="3812842717939877330">"Duvar kağıdını değiştirin"</string>
     <string name="wallpaper_suggestion_summary" msgid="9077061486716754784">"Ekranınızı kişiselleştirin"</string>
     <string name="wallpaper_settings_fragment_title" msgid="8445963841717633149">"Şuradan duvar kağıdı seçin:"</string>
     <string name="style_suggestion_title" msgid="1213747484782364775">"Telefonunuzu özelleştirme"</string>
