--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -2312,7 +2312,7 @@
     <string name="accessibility_settings" msgid="4713215774904704682">"Спеціальні можливості"</string>
     <string name="accessibility_settings_title" msgid="6739115703615065716">"Налаштування доступності"</string>
     <string name="accessibility_settings_summary" msgid="2366627644570558503">"Дисплей, взаємодія, аудіо"</string>
-    <string name="vision_settings_title" msgid="8919983801864103069">"Спеціальні можливості"</string>
+    <string name="vision_settings_title" msgid="8919983801864103069">"Налаштування для зору"</string>
     <string name="vision_settings_description" msgid="7614894785054441991">"Ви можете налаштувати цей пристрій для своїх потреб. Ці спеціальні можливості можна пізніше змінити в налаштуваннях."</string>
     <string name="vision_settings_suggestion_title" msgid="4689275412658803919">"Змінити розмір шрифту"</string>
     <string name="screen_reader_category_title" msgid="5825700839731107803">"Програма зчитування з екрана"</string>
@@ -2458,7 +2458,7 @@
     <string name="accessibility_autoclick_medium_summary" msgid="1343390686514222871">"0,6 секунди"</string>
     <string name="accessibility_autoclick_long_title" msgid="6799311820641687735">"Довге"</string>
     <string name="accessibility_autoclick_long_summary" msgid="3747153151313563637">"1 секунда"</string>
-    <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">"Інший"</string>
+    <string name="accessibility_autoclick_custom_title" msgid="4597792235546232038">"Інше"</string>
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"Коротше"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"Довше"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"Час автоматичного натискання"</string>
@@ -3729,7 +3729,7 @@
     <string name="vibrate_when_ringing_option_always_vibrate" msgid="968652667232075466">"Постійна вібрація"</string>
     <string name="vibrate_when_ringing_option_ramping_ringer" msgid="2798848945803840348">"Вібрація, тоді дзвінок, що гучнішає"</string>
     <string name="other_sound_settings" msgid="5468360269346162072">"Інші звуки"</string>
-    <string name="spatial_audio_title" msgid="6591051622375191603">"Просторовий звук"</string>
+    <string name="spatial_audio_title" msgid="6591051622375191603">"Просторове звучання"</string>
     <string name="dial_pad_tones_title" msgid="3536945335367914892">"Звуки цифрової клавіатури"</string>
     <string name="screen_locking_sounds_title" msgid="5695030983872787321">"Звук блокування екрана"</string>
     <string name="charging_sounds_title" msgid="5261683808537783668">"Звук і вібрація для заряджання"</string>
