--- a/res/values-uz/strings.xml
+++ b/res/values-uz/strings.xml
@@ -1297,7 +1297,7 @@
     <string name="auto_rotate_option_off" msgid="2788096269396290731">"Oʻchirish"</string>
     <string name="auto_rotate_option_on" msgid="5776678230808498171">"Yoqish"</string>
     <string name="auto_rotate_option_face_based" msgid="3438645484087953174">"Yoqish - Yuz asosida"</string>
-    <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Yuz aniqlanishini yoqish"</string>
+    <string name="auto_rotate_switch_face_based" msgid="7824467067774120000">"Yuzni aniqlash funksiyasini yoqish"</string>
     <string name="color_mode_title" msgid="8666690832113906028">"Ranglar"</string>
     <string name="color_mode_option_natural" msgid="6192875655101283303">"Tabiiy"</string>
     <string name="color_mode_option_boosted" msgid="4698797857766774289">"Yorqin"</string>
@@ -1376,7 +1376,7 @@
     <string name="night_display_activation_on_custom" msgid="4951143503599226846">"<xliff:g id="ID_1">%1$s</xliff:g> gacha yoniq tursin"</string>
     <string name="night_display_activation_off_custom" msgid="79965738861100371">"<xliff:g id="ID_1">%1$s</xliff:g> gacha yoqilmasin"</string>
     <string name="night_display_not_currently_on" msgid="6600205753103093827">"Tungi rejim hozirda yoniq emas"</string>
-    <string name="twilight_mode_location_off_dialog_message" msgid="4559150893687124801">"Quyosh chiqishi va botishi vaqtini aniqlash uchun qurilma geolokatsiyasi zarur."</string>
+    <string name="twilight_mode_location_off_dialog_message" msgid="4559150893687124801">"Quyoshning chiqish va botish vaqtlarini aniqlash uchun qurilmaning joylashuv axboroti zarur."</string>
     <string name="twilight_mode_launch_location" msgid="7799112373591153956">"Joylashuv sozlamalari"</string>
     <string name="dark_ui_activation_on_manual" msgid="1541006734577325234">"Yoqish"</string>
     <string name="dark_ui_activation_off_manual" msgid="2395333709291250065">"Faolsizlantirish"</string>
@@ -3659,7 +3659,7 @@
     <string name="boot_sounds_title" msgid="5033062848948884111">"Ovozni yoqish"</string>
     <string name="live_caption_title" msgid="8617086825712756983">"Jonli izoh"</string>
     <string name="live_caption_summary" msgid="2898451867595161809">"Avtomatik taglavha yaratish"</string>
-    <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Hech qanday}=1{1 ta reja sozlandi}other{# ta reja sozlandi}}"</string>
+    <string name="zen_mode_settings_schedules_summary" msgid="2047688589286811617">"{count,plural, =0{Hech qanday}=1{1 ta reja sozlangan}other{# ta reja sozlangan}}"</string>
     <string name="zen_mode_settings_title" msgid="682676757791334259">"Bezovta qilinmasin"</string>
     <string name="zen_mode_settings_summary" msgid="6040862775514495191">"Faqat ishonchli odamlar va ilovalardan bildirishnoma kelsin"</string>
     <string name="zen_mode_slice_subtitle" msgid="6849372107272604160">"Bildirishnomalarni kamaytirish"</string>
@@ -3737,7 +3737,7 @@
     <string name="zen_category_people" msgid="8252926021894933047">"Odamlar"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Ilovalar"</string>
     <string name="zen_category_exceptions" msgid="1316097981052752811">"Signallar va boshqa tovushlar"</string>
-    <string name="zen_category_schedule" msgid="2003707171924226212">"Rejalar"</string>
+    <string name="zen_category_schedule" msgid="2003707171924226212">"Jadvallar"</string>
     <string name="zen_category_duration" msgid="7515850842082631460">"Tezkor sozlamalar davomiyligi"</string>
     <string name="zen_settings_general" msgid="2704932194620124153">"Umumiy"</string>
     <string name="zen_sound_footer" msgid="4090291351903631977">"Bezovta qilinmasin rejimida, yuqorida ruxsat berilganlardan tashqari, tovush va tebranishlar ovozsiz qilinadi."</string>
