--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -1376,7 +1376,7 @@
     <string name="night_display_activation_on_custom" msgid="4951143503599226846">"Bật cho đến <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_activation_off_custom" msgid="79965738861100371">"Tắt cho đến <xliff:g id="ID_1">%1$s</xliff:g>"</string>
     <string name="night_display_not_currently_on" msgid="6600205753103093827">"Ánh sáng đêm hiện không bật"</string>
-    <string name="twilight_mode_location_off_dialog_message" msgid="4559150893687124801">"Cần có vị trí thiết bị để xác định thời điểm hoàng hôn và bình minh."</string>
+    <string name="twilight_mode_location_off_dialog_message" msgid="4559150893687124801">"Cần có vị trí thiết bị để xác định thời điểm mặt trời lặn và mặt trời mọc."</string>
     <string name="twilight_mode_launch_location" msgid="7799112373591153956">"Cài đặt vị trí"</string>
     <string name="dark_ui_activation_on_manual" msgid="1541006734577325234">"Bật ngay"</string>
     <string name="dark_ui_activation_off_manual" msgid="2395333709291250065">"Tắt ngay"</string>
@@ -3738,7 +3738,7 @@
     <string name="zen_category_apps" msgid="1167374545618451925">"Ứng dụng"</string>
     <string name="zen_category_exceptions" msgid="1316097981052752811">"Chuông báo và các hoạt động làm gián đoạn khác"</string>
     <string name="zen_category_schedule" msgid="2003707171924226212">"Lịch biểu"</string>
-    <string name="zen_category_duration" msgid="7515850842082631460">"Thời lượng trong trình đơn Cài đặt nhanh"</string>
+    <string name="zen_category_duration" msgid="7515850842082631460">"Thời lượng hoạt động khi bật trên trình đơn Cài đặt nhanh"</string>
     <string name="zen_settings_general" msgid="2704932194620124153">"Chung"</string>
     <string name="zen_sound_footer" msgid="4090291351903631977">"Khi chế độ Không làm phiền đang bật, âm thanh và rung sẽ bị tắt trừ các mục mà bạn cho phép ở trên."</string>
     <string name="zen_custom_settings_dialog_title" msgid="4613603772432720380">"Cài đặt tùy chỉnh"</string>
@@ -4542,7 +4542,7 @@
     <string name="camera_gesture_desc" msgid="7557645057320805328">"Mở ứng dụng camera bằng cách vặn cổ tay hai lần"</string>
     <string name="camera_double_tap_power_gesture_title" msgid="8264757967127716261">"Nhấn nút nguồn hai lần để mở máy ảnh"</string>
     <string name="camera_double_tap_power_gesture_desc" msgid="1539147023700755155">"Mở nhanh máy ảnh mà không cần mở khóa màn hình của bạn"</string>
-    <string name="screen_zoom_title" msgid="6928045302654960559">"Kích thước các thành phần trên màn hình"</string>
+    <string name="screen_zoom_title" msgid="6928045302654960559">"Kích thước hiển thị"</string>
     <string name="screen_zoom_short_summary" msgid="2458636490408833800">"Phóng to hoặc thu nhỏ các mục trên màn hình"</string>
     <string name="screen_zoom_keywords" msgid="5964023524422386592">"mật độ hiển thị, thu phóng màn hình, tỷ lệ, chia tỷ lệ"</string>
     <string name="screen_zoom_summary" msgid="1362984939045594989">"Thu nhỏ hoặc phóng to các mục trên màn hình. Một số ứng dụng trên màn hình có thể thay đổi vị trí."</string>
